--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
+// 全局 CSS 变量
+@import "./variables.css";
 // Transition
 @import "./transition.scss";
 // Element Plus
@@ -18,7 +20,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial,
-  sans-serif;
+    sans-serif;
 }
 
 #app {
