--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,10 @@
 @import "./transition.scss";
 // Element Plus
 @import "./element-plus.scss";
+// 注册多主题
+@import "./theme/register.scss";
+// mixin
+@import "./mixins.scss";
 
 // 业务页面几乎都应该在根元素上挂载 class="app-container"，以保持页面美观
 .app-container {
